--- a/RichEditorView/Assets/editor/rich_editor.html
+++ b/RichEditorView/Assets/editor/rich_editor.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
     <meta name="viewport" content="user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" type="text/css" href="normalize.css"> 
+    <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
