--- a/RichEditorView/Assets/editor/rich_editor.html
+++ b/RichEditorView/Assets/editor/rich_editor.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div id="editor" contentEditable="true" placeholder="" class="placeholder"></div>
+<script type="text/javascript" src="lodash.min.js"></script>
 <script type="text/javascript" src="rich_editor.js"></script>
 </body>
 </html>
